# cflow

./: .gitignore  404.html  README.md  estrutura.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
api/connectors/: index.html
api/core/connector_base/: index.html
api/core/flux/: index.html
api/core/listener_base/: index.html
api/core/task_base/: index.html
api/core/tool_base/: index.html
api/flux/: index.html
api/tasks/: index.html
api/tools/: index.html
api/utils/: index.html
components/connectors/: index.html
components/connectors/apis/: index.html
components/connectors/databases/: index.html
components/connectors/files/: index.html
components/connectors/llms/: index.html
components/flux/: index.html
components/tasks/: index.html
components/tools/: index.html
docs/: CNAME  index.md
docs/components/: connectors.md  flux.md  tasks.md  tools.md
docs/guide/: examples.md  getting-started.md  installation.md
examples/: custom_connector.py  custom_tool.py  custom_trigger.py  excel_summary.py  hooks_example.py  schedule_example.py  trigger_modes.py
guide/examples/: index.html
guide/getting-started/: index.html
guide/installation/: index.html
search/: search_index.json
src/: __init__.py  config.py  logger.py  main.py  main_listener.py  poc_telegram.py
src/cflow/: __init__.py  automation_listener_base.py  automation_listener_protocol.py  config.py  connector.py  connector_base.py  connector_manager.py  connector_protocol.py  logger.py  task.py  task_base.py  task_protocol.py  tool.py  tool_base.py  tool_protocol.py  utils.py  workflow.py
src/connectors/: connector_template.py  excel_connector.py  rest_connector.py  telegram_connector.py
src/connectors/trello/: .gitignore  pyproject.toml  requirements.txt  setup.py  trello_connector.py
src/core/: logger.py  utils.py
src/fluxr/: __init__.py  base.py  flux.py
src/listeners/: google_drive_listener.py  local_folder_listener.py  mautic_contact_listener.py  telegram_message_listener.py  trello_card_listener.py  webhook_listener.py
src/samples/: main.py  main_listener.py
src/tasks/: excel_to_rest_task.py  excel_to_telegram_task.py  task_template.py
src/templates/: listener_template.py  template_flux.py
src/tools/: tool_template.py  upercase_tool.py
(+237 files in other folders)
