[tool.poetry]
name = "cflow"
version = "0.1.0"
description = "Workflow for backend automations"
authors = ["Igor Medeiros <igor.medeiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
