[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxr"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A modular hyperautomation framework inspired by CrewAI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "python-telegram-bot>=20.0",
    "openpyxl>=3.1.0",
    "asyncio>=3.4.3"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fluxr"
"Bug Tracker" = "https://github.com/yourusername/fluxr/issues"